[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arhupy"
version = "1.1.0"
description = "A prompt engineering toolkit for LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Arhu" }
]
dependencies = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.setuptools.packages.find]
include = ["arhupy*"]

[project.scripts]
arhupy = "arhupy.cli:main"
